# wedding_project

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile
backend/printer/: Cargo.toml
backend/printer/src/: main.rs  print.rs
backend/src/: main.rs
nginx/: Dockerfile
nginx/nginx/: nginx.conf
nginx/printer_project/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
nginx/printer_project/public/: output.css
nginx/printer_project/src/: lib.rs  main.rs
nginx/printer_project/src/components/: cover.rs  mod.rs  option_result.rs  question.rs  show_text.rs  submit.rs
nginx/printer_project/src/pages/: home.rs  ip.rs  mod.rs  questions.rs
