[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1.5.0"
rand = "0.8.5"
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"


